h2 added to html

--- a/index1.html
+++ b/index1.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>hello world best
-        
-    </h1>
+    <h1>hello world best</h1>
+    <h2>hello world best Mustapha</h2>
     Abdul Rauf Mustapha
 </body>
 </html>
